--- a/HTML/HTML_Tutorial.tex
+++ b/HTML/HTML_Tutorial.tex
@@ -1334,6 +1334,50 @@ When we submit the form, the value of \colorbox{lightgray}{<textarea>} is the te
 \end{lstlisting}
 This code will render a \colorbox{lightgray}{<textarea>} that contains pre-filled text: “Adding default text”.
 
+\subsection{Submit Form}
+Remember, the purpose of a form is to collect information that will be submitted. That is the role of the submit button — users click on it when they are finished with filling out information in the \colorbox{lightgray}{<form>} and they are ready to send it off. Now that we have gone over how to create various input elements, let us now go over how to create a submit button.
+
+To make a submit button in a \colorbox{lightgray}{<form>}, we are going to use the reliable \colorbox{lightgray}{<input>} element and set the \colorbox{lightgray}{type} to \colorbox{lightgray}{"submit"}. For instance:
+\begin{lstlisting}
+<form>
+  <input type="submit" value="Send">
+</form>
+\end{lstlisting}
+The code above renders:
+\begin{figure}[H]
+\includegraphics[scale = 0.8]{3_16}
+\centering
+\end{figure}
+\vspace{-4mm}
+Notice in the code snippet that the \colorbox{lightgray}{value} assigned to the \colorbox{lightgray}{<input>} shows up as text on the submit button. If there is not a \colorbox{lightgray}{value} attribute, the default text, \colorbox{lightgray}{Submit} shows up on the button.
+
+\subsection{Review}
+Let us review what we learned about the \colorbox{lightgray}{<form>} element:
+\begin{itemize}[leftmargin = *]
+\item The purpose of a \colorbox{lightgray}{<form>} is to allow users to input information and send it.
+\item The \colorbox{lightgray}{<form>}'s \colorbox{lightgray}{action} attribute determines where the form’s information goes.
+\item The \colorbox{lightgray}{<form>}'s \colorbox{lightgray}{method} attribute determines how the information is sent and processed.
+\item To add fields for users to input information we use the \colorbox{lightgray}{<input>} element and set the \colorbox{lightgray}{type} attribute to a field of our choosing:
+\begin{itemize}[leftmargin = *]
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"text"} creates a single row field for text input.
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"password"} creates a single row field that censors text input.
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"number"} creates a single row field for number input.
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"range"} creates a slider to select from a range of numbers.
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"checkbox"} creates a single checkbox which can be paired with other checkboxes.
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"radio"} creates a radio button that can be paired with other radio buttons.
+\item Setting \colorbox{lightgray}{type} to \colorbox{lightgray}{"list"} will pair the \colorbox{lightgray}{<input>} with a \colorbox{lightgray}{<datalist>} element if the \colorbox{lightgray}{id} of both are the same.
+\item Setting type to \colorbox{lightgray}{"submit"} creates a submit button.
+\end{itemize}
+\item A \colorbox{lightgray}{<select>} element is populated with \colorbox{lightgray}{<option>} elements and renders a dropdown list selection.
+\item A \colorbox{lightgray}{<datalist>} element is populated with \colorbox{lightgray}{<option>} elements and works with an \colorbox{lightgray}{<input>} to search through choices.
+\item A \colorbox{lightgray}{<textarea>} element is a text input field that has a customizable area.
+\item When a \colorbox{lightgray}{<form>} is submitted, the \colorbox{lightgray}{name} of the fields that accept input and the \colorbox{lightgray}{value} of those fields are sent as \colorbox{lightgray}{name=value} pairs.
+\end{itemize}
+Using the \colorbox{lightgray}{<form>} element in conjunction with the other elements listed above allows us to create sites that take into consideration the wants and needs of our users.
+
+
+
+
 
 
 \end{document}
